[tool.poetry]
name = "fetchers"
version = "0.1.0"
description = ""
authors = ["Maria Fernanda Gonzalez <mariagr@vedur.is>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.10"

[tool.poetry.dev-dependencies]
requests = "2.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
